# cmake_cpp_lib_demo

./: CMakeLists.txt  README.md  delme.txt
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
